# shell

./: .gitignore  CMakeLists.txt  LICENSE
include/: job.h  slice.h  utils.h
src/: job.c  main.c  slice.c  utils.c
tests/: slice_test.c
